--- a/front/index.html
+++ b/front/index.html
@@ -92,6 +92,9 @@ var app = new Vue({
             this.nome = ""
             this.idade = ""
             this.cidade = ""
+        },
+        faznada(){
+            
         }
     }
 })
